# EdgeUI

./: CMakeLists.txt  EdgeUI.proj  README.md  makeit.sh
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  helloworld.proj
include/: Application.h  DataBinding.h  Diagnostics.h  Element.h  Graphics.h  GraphicsTypes.h  LayoutGrid.h  Point.h  Rectangle.h  ResourceMap.h  ScratchBuffer.h  Style.h
include/controls/: Button.h  CheckBox.h  Controls.h  RadioButton.h  Slider.h
source/: Diagnostics.h  Element.cpp  Element.h  FreeTypeFont.cpp  FreeTypeFont.h  Graphics.cpp  Graphics.h  GraphicsTypes.h  LayoutGrid.cpp  ResourceMap.cpp  ScratchBuffer.h  TinyPNG.cpp  TinyPNG.h  TinyTGA.h
source/GL/: FreeTypeFont.cpp  FreeTypeFont.h  GLDiagnostics.cpp  GLDiagnostics.h  GLIncludes.h  GLShader.cpp  GLShader.h  GLTexture.h  Graphics_GL.cpp  Graphics_GL.h  PlatformInterface_DRM.cpp  PlatformInterface_DRM.h  PlatformInterface_GTK4.cpp  PlatformInterface_Wayland.cpp  PlatformInterface_Wayland.h  PlatformInterface_X11.cpp  PlatformInterface_X11.h
